Changelog
=========


0.1 (unreleased)
----------------

- Fixed resize js error.
  [robgietema]

- Fixed drag js error.
  [robgietema]

- Add MANIFEST.in.
  [WouterVH]

- Refactored dependencies so that plone.app.deco now contains all UI and
  plone.app.page contains all storage and logic related to Deco.
  plone.app.layoutbehavior and plone.formwidget.layoutbehavior are now
  gone.
  [optilude]

- Removed plone.directives.standardtiles dependency. A marker interface is
  much simpler.
  [optilude]

- Move close icon.
  [robgietema]

- unittest2 added as test dependency to make hudson happy.
  [timo]

- Fixed button width.
  [robgietema]

- Removed the registry keys to hide layout and content, which are now schema-hidden
  [shywolf9982]

- Added plone.directives,standardtiles as dependency: should probably be removed once we get the registry stuff out
  [shywolf9982]

- Hooked up plone.directives.standardtiles, settings now honored
  [shywolf9982]

- PEP8
  [jaroel]

- Set tileURL to use p and not span because tinymce auto wraps spans.
  [robgietema]

- Removing interlude import since it does not do anything.
  [timo]

- Fixed pulldown menu.
  [robgietema]

- deco style toolbar
  [laurenskling]

- Rearranged tiles.
  [robgietema]

- * Added the ability to hide field tiles via registry * Changed the format of the widget actions keys to work similarly to the rest
  [shywolf9982]

- name -> value + tests
  [maerteijn]

- name -> value
  [maerteijn]

- Add ordering to items in actions
  [maerteijn]

- Added more sorting to fields, tiles and formats
  [maerteijn]

- Also made IFormat sortable now
  [maerteijn]

- Fixed settings icon.
  [robgietema]

- Added sorting to the formatting categories
  [maerteijn]

- Added WeightedDict interface
  [maerteijn]

- Added tests for the weight fields and primary actions
  [maerteijn]

- Added weight to the actions
  [maerteijn]

- Added sorting for primary and secondary actions
  [maerteijn]
